Fix some tag alignment issues (#365)

--- a/web/src/styles/JiraStatus.scss
+++ b/web/src/styles/JiraStatus.scss
@@ -7,7 +7,6 @@
   font-size: 11px;
   font-weight: 700;
   line-height: 1;
-  margin-left: 8px;
   overflow: hidden;
   padding: 2px 4px;
   text-transform: uppercase;
